--- a/app/components/nav_bar/bar_component.html.erb
+++ b/app/components/nav_bar/bar_component.html.erb
@@ -1,1 +1,15 @@
-<div><%= @title %> </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Colby's Movie Ratings</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">Search</a>
+            </div>
+        </div>
+        <% @catagory.present? %>
+            <span class="navbar-text"><%= @catagory %></span>
+        <% end %>
+    </div>
+</nav>
