update markup add basic styling. update routes to include start screen

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -13,6 +13,8 @@
 
   <body>
     <%= render(NavBar::BarComponent.new(title: 'Navabr')) %>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
