--- a/app/assets/stylesheets/start_screen.scss
+++ b/app/assets/stylesheets/start_screen.scss
@@ -1,3 +1,31 @@
-// Place all the styles related to the StartScreen controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.start-wrapper{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    .start-header{
+        width: 100%;
+        height: 30%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        h1{
+            font-size: 4.5rem;
+            text-align: center;
+        }
+    }
+    .start-body{
+        width: 75%;
+        height: 60%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: column;
+        p{
+            font-size: 2rem;
+            padding-bottom: 5px;
+        }
+    }
+}
