work on db, update data

--- a/app/views/start_screen/index.html.erb
+++ b/app/views/start_screen/index.html.erb
@@ -4,6 +4,6 @@
     </div>
     <div class="start-body">
         <p>Hello. Welcome to Colby's Movie Ratings.</p>
-        <%= link_to "View movie ratings ", "/search", class: "btn btn-primary btn-lg" %>
+        <%= link_to "View movie ratings ", "/collection", class: "btn btn-primary btn-lg" %>
     </div>
 </div>
