--- a/app/views/movie_collection/index.html.erb
+++ b/app/views/movie_collection/index.html.erb
@@ -1,5 +1,17 @@
-<div class="card" style="width: 18rem;">
+<%# <div class="card" style="width: 18rem;">
   <ul class="list-group list-group-flush">
-  <%# render list of movies %>
+
   </ul>
-</div>
+</div> %>
+
+<h1>Articles</h1>
+
+<ul>
+  <% @movies.each do |movie| %>
+    <li>
+        <a href="/collection/<%= movie.id %>">
+        <%= movie.title %>
+      </a>
+    </li>
+  <% end %>
+</ul>
