update component folders. start moving data to movie_component

--- a/app/views/movie_collection/show.html.erb
+++ b/app/views/movie_collection/show.html.erb
@@ -1,7 +1,1 @@
-<h1><%= @movie.title %></h1>
-
-<p><%= @movie.rating %></p>
-<p><%= @movie.date_watched %></p>
-<p><%= @movie.times_watched %></p>
-<p><%= @movie.genre %></p>
-<p><%= @movie.tv_show %></p>
+<%= render(Movie::MovieComponent.new(movie: @movie)) %>
