--- a/app/components/movie/movie_component.html.erb
+++ b/app/components/movie/movie_component.html.erb
@@ -1,4 +1,6 @@
 <div>
     <%= render(TitleComponent.new(title: @title))%>
     <%= render(RatingComponent.new(rating: @rating))%>
+    <%= render(GenreComponent.new(genre: @genre)) %>
+    <%= render(TimesWatchedComponent.new(times_watched: @times_watched)) %>
 </div>
