--- a/app/views/movie_collection/index.html.erb
+++ b/app/views/movie_collection/index.html.erb
@@ -6,12 +6,8 @@
 
 <h1>Articles</h1>
 
-<ul>
-  <% @movies.each do |movie| %>
-    <li>
-        <a href="/collection/<%= movie.id %>">
-        <%= movie.title %>
-      </a>
-    </li>
-  <% end %>
-</ul>
+<div class="container-fluid">
+  <div class="row">
+    <%= render(MovieCollection::ListItemComponent.with_collection(@movies)) %>
+  </div>
+</div>
