--- a/app/components/movie_collection/list_item_component.html.erb
+++ b/app/components/movie_collection/list_item_component.html.erb
@@ -1,12 +1,14 @@
-<div class="card col-3" style="width: 18rem; margin:5px;">
-  <img src="..." class="card-img-top" alt="...">
+<div class="card col-xs-12 col-sm-5 col-md-5 col-lg-3" style="margin:5px;">
+  <%# <img src="..." class="card-img-top" alt="..."> %>
   <div class="card-body">
-    <h5 class="card-title">
-        <%= @title %>
-    </h5>
-    <p class="card-text">
-        <%= @genre %>
-    </p>
-    <a href=<%= @link %> class="btn btn-primary">See Rating</a>
+    <h4 class="card-title"><%= @title %></h4>
   </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Rating: <%= @rating %></li>
+        <li class="list-group-item">Genre: <%= @genre %></li>
+    </ul>
+    <div class="card-body">
+        <a href=<%= @link %> class="btn btn-primary">See More Info</a>
+    </div>
 </div>
+
