--- a/app/views/movie_collection/index.html.erb
+++ b/app/views/movie_collection/index.html.erb
@@ -4,10 +4,11 @@
   </ul>
 </div> %>
 
-<h1>Articles</h1>
+<h1>All Movies</h1>
 
 <div class="container-fluid">
-  <div class="row">
-    <%= render(MovieCollection::ListItemComponent.with_collection(@movies)) %>
+  <%= render MovieCollection::FilterComponent.new  %>
+  <div class="row justify-content-center row-cols-2">
+    <%= render MovieCollection::ListItemComponent.with_collection @movies %>
   </div>
 </div>
