--- a/app/components/movie_collection/filter_component.html.erb
+++ b/app/components/movie_collection/filter_component.html.erb
@@ -1,10 +1,26 @@
-<div class='container'>
-    <div class="row justify-content-center">
-        <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
-            <button type="button" class="btn btn-outline-primary">Action</button>
-            <button type="button" class="btn btn-outline-primary">Comedy</button>
-            <button type="button" class="btn btn-outline-primary">Horror</button>
-            <button type="button" class="btn btn-outline-primary">TV Shows</button>
+<%= component_controller do %>
+    <div class='container'>
+        <div class="row justify-content-center">
+            <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
+                <%= reflex_tag\
+                    :filter_based_on_term, 
+                    :button, 
+                    "Action"
+                    value='action'
+                %>
+                <%= reflex_tag\
+                    :filter_based_on_term, 
+                    :button, 
+                    "Comedy"
+                    value='comedy'
+                %>
+                <%= reflex_tag\
+                    :filter_based_on_term, 
+                    :button, 
+                    "Horror"
+                    value='horror'
+                %>
+            </div>
         </div>
     </div>
-</div>
+<% end %>
