--- a/app/views/movie_collection/index.html.erb
+++ b/app/views/movie_collection/index.html.erb
@@ -7,8 +7,5 @@
 <h1>All Movies</h1>
 
 <div class="container-fluid">
-  
-  <div class="row justify-content-center row-cols-2">
-    <%= render MovieCollection::ListItemComponent.with_collection @movies %>
-  </div>
+  <%= render MovieCollection::TotalCollectionComponent.new(movies: @movies) %>
 </div>
