--- a/app/components/movie_collection/filter_component.html.erb
+++ b/app/components/movie_collection/filter_component.html.erb
@@ -1,4 +1,4 @@
-<div class='container'>
+<%# <div class='container'>
     <div class="row justify-content-center">
         <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
             <button
@@ -8,4 +8,7 @@
 
         </div>
     </div>
-</div>
+</div> %>
+<%= component_controller do %>
+  <p><%= @count %></p
+<% end %>
