--- a/app/components/movie_collection/total_collection_component.html.erb
+++ b/app/components/movie_collection/total_collection_component.html.erb
@@ -1,5 +1,3 @@
-<div class="row justify-content-center row-cols-2">
-    <%= render MovieCollection::ListItemComponent.with_collection @movies %>
-    <%== pagy_nav(@pagy) %>
-</div>
-
+<%= component_controller do %>
+  <p><%= @count %></p
+<% end %>
